# robotie-ros2

./: CMakeLists.txt  package.xml
config/: controllers.yaml  twist_mux.yaml
description/: gazebo.xacro  inertia.xacro  properties.xacro  robotie.urdf  robotie.xacro  ros2_control.xacro
install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
install/robotie/lib/robotie/: vel_publisher
install/robotie/share/ament_index/resource_index/package_run_dependencies/: robotie
install/robotie/share/ament_index/resource_index/parent_prefix_path/: robotie
install/robotie/share/robotie/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
install/robotie/share/robotie/cmake/: robotieConfig-version.cmake  robotieConfig.cmake
install/robotie/share/robotie/config/: controllers.yaml
install/robotie/share/robotie/description/: gazebo.xacro  inertia.xacro  properties.xacro  robotie.urdf  robotie.xacro  ros2_control.xacro
install/robotie/share/robotie/environment/: ament_prefix_path.dsv  path.dsv
install/robotie/share/robotie/launch/: gazebo_sim.launch.py  rsp.launch.py
launch/: gazebo_sim.launch.py  rsp.launch.py  slam.launch.py
log/: latest_build
src/: vel_publisher.cpp
world/: test.world
